Atualizando index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="index.css">
 	</head>
 	<body>
-		<img src="imagens/banner.png"     style="width:100%; height:auto; max-height:250px; object-fit:cover; display:block;">
+		<img src="imagens/Banner.png"     style="width:100%; height:auto; max-height:250px; object-fit:cover; display:block;">
 		<hr>
 		<ul type="circle">
 			<li><a href="index.html">Home</a></li>
