Atualizando sobre.html e sugestao.html, adicionando radio.html

--- a/index.html
+++ b/index.html
@@ -1,19 +1,41 @@
 <!doctype html>
 <html>
-	<head>
-		<title>Blog do Grêmio</title>
-		<meta charset="utf-8">
-		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="index.css">
-	</head>
-	<body>
-		<img src="imagens/Banner.png"     style="width:100%; height:auto; max-height:250px; object-fit:cover; display:flex;">
-		<hr>
-		<ul type="circle">
-			<li><a href="index.html">Home</a></li>
-			<li><a href="sobre.html">Quem somos</a></li>
-			<li><a href="sugestao.html">Sugestões</a></li>
-			<li><a href="radio">Rádio</a></li>
-		</ul>
-	</body>
+<head>
+    <title>Blog do Grêmio</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <header>
+        <img src="imagens/Banner.png" alt="Banner do Blog" class="banner">
+        <nav>
+            <ul class="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="sobre.html">Quem somos</a></li>
+                <li><a href="sugestao.html">Sugestões</a></li>
+                <li><a href="radio.html">Rádio</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main class="container">
+        <article class="conteudo-principal">
+            <div class="texto">
+                <h1>Julho 2025</h1>
+                <p>"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?"</p>
+            </div>
+            <div class="imagem-lateral">
+                <img src="imagens/logo.jpg" alt="Logo do Grêmio">
+            </div>
+        </article>
+    </main>
+
+    <footer>
+        <div class="info-rodape">
+            <span>Direitos Reservados</span>
+        </div>
+    </footer>
+</body>
 </html>
