Conectando index.js ao site

--- a/index.html
+++ b/index.html
@@ -31,11 +31,15 @@
             </div>
         </article>
     </main>
-
     <footer>
         <div class="info-rodape">
-            <span>Direitos Reservados</span>
+            <span>Direitos Reservados © 2025</span>
+            <span>Horário oficial: <span id="hora-atual">--:--:--</span></span>
+            <span id="data-atual">--/--/----</span>
         </div>
     </footer>
+
+    <!-- Script para data/hora dinâmica (opcional) -->
+    <script src="Index.js"></script>
 </body>
 </html>
