--- a/radio.html
+++ b/radio.html
@@ -37,15 +37,13 @@
 
     <footer>
         <div class="info-rodape">
-            <span>Pesquisar</span>
-            <span>POR</span>
-            <span id="hora-atual">21:16</span>
-            <span>PIB</span>
-            <span id="data-atual">21/07/2025</span>
+            <span>Direitos Reservados © 2025</span>
+            <span>Horário oficial: <span id="hora-atual">--:--:--</span></span>
+            <span id="data-atual">--/--/----</span>
         </div>
     </footer>
 
     <!-- Script para data/hora dinâmica (opcional) -->
-    <script src="scripts.js"></script>
+    <script src="Index.js"></script>
 </body>
 </html>
