Atualizando sugestao.html

--- a/sugestao.html
+++ b/sugestao.html
@@ -14,7 +14,7 @@
 
         hr {
             height: 5px;
-            background: linear-gradient(to right, #3498db, #9b59b6);
+            background: linear-gradient(to right, #258fd6, #9b59b6);
             border: none;
             border-radius: 3px;
             margin: 20px 0;
