--- a/sugestao.html
+++ b/sugestao.html
@@ -7,9 +7,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <style>
-        /* ===== IMAGEM DE FUNDO FIXA ===== */
+
         body {
-            background-image: url('imagens/fundo.jpg'); /* coloque sua imagem aqui */
+            background-image: url('imagens/fundo.jpg'); 
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
@@ -18,7 +18,6 @@
             padding: 0;
             font-family: 'Poppins', sans-serif;
         }
-
         h1 {
             text-align: center;
             color: #0267cc;
@@ -39,7 +38,6 @@
         .pagina-padrao {
             text-align: center;
         }
-
         hr {
             height: 5px;
             background: linear-gradient(to right, #258fd6, #9b59b6);
@@ -48,15 +46,14 @@
             margin: 20px 0;
             box-shadow: 3px 2px black;
         }
-
         .formulario-iframe {
             max-width: 800px;
             margin: 30px auto;
-             max-width: 750px; /* largura ideal do forms do Google */
+             max-width: 750px; 
             padding: 20px;
             border-radius: 12px;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-            background-color: rgba(255, 255, 255, 0.95); /* branco translúcido para melhor leitura */
+            background-color: rgba(255, 255, 255, 0.95); 
         }
 
         .formulario-iframe iframe {
@@ -64,10 +61,6 @@
             height: 745px;
             border: none;
         }
-
-
-
-
     </style>
 </head>
 <body>
