sobre.html radio.html sobre_radio.html

--- a/sobre_radio.html
+++ b/sobre_radio.html
@@ -1,36 +1,13 @@
 <!doctype html>
 <html>
 <head>
-    <title>Blog do Grêmio - [NOME DA PÁGINA]</title>
+    <title>Blog do Grêmio</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-        <style>
-            .botao-personalizado {
-        display: inline-block;
-        padding: 12px 24px;
-        font-size: 16px;
-        font-family: 'Poppins', sans-serif;
-        color: white;
-        background: linear-gradient(90deg, #007bff, #0056b3);
-        border: none;
-        border-radius: 30px;
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-        text-decoration: none;
-        transition: all 0.3s ease;
-        font-weight: 600;
-    }
-
-    .botao-personalizado:hover {
-        transform: translateY(-2px);
-        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
-        background: linear-gradient(90deg, #0056b3, #003f88);
-    }
-
-    </style>
     <header>
         <img src="imagens/Banner.png" alt="Banner do Blog" class="banner">
         <nav>
@@ -45,13 +22,10 @@
 
     <main class="container">
         <article class="pagina-padrao">
-            <h1>Rádio e Podcasts</h1>
+            <h1>Sobre a Rádio</h1>
             <div class="conteudo-flex">
                 <div class="texto">
                     <p><p>
-                <div style="text-align: center; margin-top: 30px;">
-                    <a href="sobre_radio.html" target="_blank" class="botao-personalizado">Saiba mais</a>
-                </div>
                 </div>
             </div>
         </article>
