--- a/radio.html
+++ b/radio.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Blog do Grêmio - [NOME DA PÁGINA]</title>
+    <title>Blog do Grêmio - Radio</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
